--- a/style.css
+++ b/style.css
@@ -1,144 +1,92 @@
 * {
 	margin: 0px;
 	padding: 0px;
-	box-sizing: border-box;
+	font-family: "Noto Sans TC", "Microsoft JhengHei";
+	letter-spacing: 1.5px;
 }
 
-body {
-	font-family: 'Open Sans', sans-serif;
-}
 
-/******************** header ********************/
-
-.navbar {
-	display: flex;
-	align-items: center;
-	padding: 20px;
+.container {
+	position: relative;
 }
 
 nav {
-	flex: 1;
-	text-align: right;
+	position: fixed;
+	left: 0px;
+	width: 200px;
+	height: 900px;
+	background-color: rgba(25,11,1,0.9);
 }
 
-nav ul {
-	display: inline-block;
-	list-style-type: none;
-}
-
-nav ul li {
-	display: inline-block;
-	margin-right: 20px;
+section {
+	margin-left: 200px;
 }
 
 a {
 	text-decoration: none;
-	color: #555;
+	color: white;
 }
 
-p {
-	color: #555;
-}
-
-.container {
-	max-width: 1300px;
-	margin: auto;
-	padding-left: 25px;
-	padding-right: 25px;
-}
-
-.row  {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-
-.col-2 {
-	flex-basis: 50%;
-	min-width: 300px;
-}
-
-.col-2 img {
-	max-width: 100%;
-	padding: 50px 0px;
-}
-
-.col-2 h1 {
-	font-size: 50px;
-	line-height: 60px;
-	margin: 25px 0;
-}
-
-.btn {
+header .logo {
 	display: inline-block;
-	background-color: #ff523b;
-	color: #fff;
-	padding: 8px 30px;
-	margin: 30px 0;
-	border-radius: 30px;
-	transition: background-color 0.5s;
+	border: 1px solid #e7bc3b;
+	border-radius: 99em;
+	/* margin: 40px 25px; */
+	width: 100px;
+	height: 100px;
+	font-size: 50px;
+	text-align: center;
+	line-height: 100px;
+	margin: 20px 50px;
+	cursor: pointer;
 }
 
-.btn:hover {
-	background-color: #563434;
+header .ch {
+	font-size: 16px;
+	color: inherit;
 }
 
-.header {
-	background: radial-gradient(#fff, #ffd6d6)
+header .en {
+	font-family: Arial;
+	font-size: 12px;
+	color: inherit;
 }
 
-.header .row {
-	margin-top: 70px;
+header nav li a:hover {
+    color: #e7bc3b;
 }
 
-/******************** categories ********************/
-
-.categories {
-	margin: 70px 0;
+header nav ul li {
+    text-align: center;
+    display: block;
+    margin-bottom: 35px;
 }
 
-.col-3 {
-	flex-basis: 30%;
-	min-width: 250px;
-	margin-bottom: 30px;
+header .fb {
+	width: 50px;
+  height: 50px;
+  display: block;
+  margin: 0 auto 50px;
+  background-image: url(img/fb.png);
+  transition: 0.5s;
+  cursor: pointer;
 }
 
-.col-3 img {
-	width: 100%;
-}
-
-.small-container {
-	max-width: 1080px;
-	margin: auto;
-	padding-left: 25px;
-	padding-right: 25px;
-}
-
-/******************** products ********************/
-
-.col-4 {
-	flex-basis: 25%;
-	padding: 10px;
-	min-width: 200px;
-	margin-bottom: 50px;
-}
-
-.col-4 img {
-	width: 100%;
+header .fb:hover {
+	background-image: url(img/fb_yellow.png);
 }
 
 .title {
-	text-align: center;
-	margin: 0 auto 80px;
 	position: relative;
-	line-height: 60px;
+	text-align: center;
 	color: #555;
+	line-height: 60px;
+	font-size: 30px;
 }
 
 .title::after {
 	content: "";
-	background-color: #ff523b;
+	background-color: #e7bc3b;
 	width: 80px;
 	height: 5px;
 	border-radius: 5px;
@@ -148,237 +96,77 @@ p {
 	transform: translateX(-50%);
 }
 
-h4 {
-	color: #555;
-	font-weight: normal;
+nav::after {
+	content: "";
+	background-color: #e7bc3b;
+	width: 80px;
+	height: 5px;
+	border-radius: 5px;
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
-.col-4 p {
-	font-size: 14px;
+.menu {
+	display: flex;
+	margin-top: 30px;
+	align-items: center;
+	justify-content: space-around;
+	flex-wrap: wrap;
 }
 
-.rating .fa {
-	color: #ff523b;
+.col-3 {
+	flex-basis: 30%;
+  min-width: 250px;
+  margin-bottom: 30px;
 }
 
-.col-4:hover {
-	transform: translateY(-5px);
-}
-
-.offer {
-	background: radial-gradient(#fff, #ffd6d6);
-	margin-top: 80px;
-	padding: 30px 0;
-}
-
-.col-2 .offer-img {
-	padding: 50px;
-}
-
-small {
-	color: #555;
-}
-
-/******************** testimonial ********************/
-
-.testimonial {
-	padding-top: 100px;
-}
-
-.testimonial .col-3 {
+.menu .col-3 {
 	text-align: center;
-	padding: 40px 20px;
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
-	cursor: pointer;
+  padding: 40px 20px 20px;
+  box-shadow: 0 0 20px 0 rgb(0 0 0 / 10%);
+  cursor: pointer;
 }
 
-.testimonial .col-3 img {
-	width: 50%;
-	margin-top: 20px;
-	border-radius: 50%;
-}
-
-.testimonial .col-3:hover {
+.menu .col-3:hover {
 	transform: translateY(-10px);
 }
 
-.fa.fa-quote-left {
-	font-size: 34px;
-	color: #ff523b;
+.menu .food-1,
+.menu .food-2,
+.menu .food-3,
+.menu .food-4 {
+	flex: 1;
+	width: 300px;
 }
 
-.col-3 p {
-	font-size: 12px;
-	margin: 12px 0;
-	color: #777;
-}
-
-.testimonial .col-3 h3 {
-	font-weight: 600px;
-	color: #555;
-	font-size: 16px;
-}
-
-/******************** brands ********************/
-
-.brands {
-	margin: 100px;
-}
-
-.col-5 {
-	width: 160px;
-}
-
-.col-5 img {
+.menu img {
 	width: 100%;
-	cursor: pointer;
-	filter: grayscale(100%);
 }
 
-.col-5 img:hover {
-	filter: grayscale(0);
+.rating {
+	color: #e7bc3b;
 }
 
-/******************** footer ********************/
+/*********** footer **********/
 
 .footer {
-	background-color: #000;
-	color: #8a8a8a;
-	font-size: 14px;
-	padding: 60px 0 20px;
+	height: 150px;
+	color: white;
+	background-color: rgba(25,11,1,0.7);
+	padding: 20px;
 }
 
 .footer p {
-	color: #8a8a8a;
-}
-
-.footer h3 {
-	color: #fff;
-	margin-bottom: 20px;
-}
-
-.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4 {
-	min-width: 250px;
-	margin-bottom: 20px;
-}
-
-.footer-col-1 {
-	flex-basis: 30%;
-}
-
-.footer-col-2 {
-	flex: 1;
 	text-align: center;
+	font-weight: 50px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
-.footer-col-2 img {
-	width: 180px;
-	margin-bottom: 20px;
-}
-
-.footer-col-3, .footer-col-4 {
-	flex-basis: 12%;
+.footer h1 {
 	text-align: center;
-}
-
-ul {
-	list-style-type: none;
-}
-
-.app-logo {
-	margin-top: 20px;
-}
-
-.app-logo img {
-	width: 140px;
-}
-
-.footer hr {
-	border: none;
-	background-color: #b5b5b5;
-	height: 1px;
-	margin: 20px 0;
-}
-
-.copyright {
-	text-align: center;
-}
-
-.menu-icon {
-	width: 28px;
-	margin-left: 20px;
-}
-
-.row-2 {
-	justify-content: space-around;
-	margin: 100px auto 50px;
-}
-
-select {
-	border: 1px solid #ff523b;
-	padding: 5px;
-	background-color: #fff;
-}
-
-select:focus {
-	outline: none;
-}
-
-.page-btn {
-	margin: 0 auto 80px;
-}
-
-.page-btn span {
-	display: inline-block;
-	border: 1px solid #ff523b;
-	margin-left: 10px;
-	width: 40px;
-	height: 40px;
-	text-align: center;
-	line-height: 40px;
-	cursor: pointer;
-}
-
-.page-btn span:hover {
-	background-color: #ff523b;
-	color: #fff;
-}
-
-/******************** media query for menu ********************/
-
-@media only screen and (max-width: 800px) {
-	nav ul {
-		position: absolute;
-		top: 70px;
-		left: 0;
-		background-color: #333;
-		width: 100%;
-		overflow: hidden;
-		transition: max-height 0.5s;
-	}
-
-	nav ul li {
-		display: block;
-		margin-right: 50px;
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}
-
-	nav li a {
-		color: #fff;
-	}
-
-	.navbar .menu-icon {
-		display: block;
-		cursor: pointer;
-	}
-}
-/******************** media query for less than 600 screen size ********************/
-@media only screen and (max-width: 600px) {
-	.row {
-		text-align: center;
-	}
-	.col-2, .col-3, .col-4 {
-		flex-basis: 100%;
-	}
+	font-weight: 300px;
+	font-size: 38px;
 }
